<resources>
    <string name="app_name">LoQuiz</string>
    <string name="default_champpick">Champion</string>
    <string name="start_champ_quiz">Start Champion Quiz</string>
    <string name="score_text">Score:</string>
    <string name="final_score_default">Final Score: 0</string>
    <string name="final_accuracy_default">Accuracy : 0%</string>
    <string name="final_return_menu">Return To Main Menu</string>
    <string name="retry_button">Retry</string>
    <string name="start_item_quiz">Start Item Quiz</string>
    <string name="start_ability_quiz">Start Ability Quiz</string>
    <string name="test_1">Champion Name</string>
    <string name="test_2">Lore</string>
    <string name="countdown_default">1:00</string>
    <string name="timer_default">0:00</string>
    <string name="countdown_button_default">START</string>
    <string name="final_time_default">Done in: 0:00</string>
    <string name="training_one_default">20</string>
    <string name="training_two_default">50</string>
    <string name="training_three_default">100</string>
    <string name="time_one_default">0:30</string>
    <string name="time_two_default">1:00</string>
    <string name="time_three_default">2:00</string>
    <string name="defaultID">defaultchampion</string>
    <string name="wrongs_default">Wrong:</string>
    <string name="button_start_default">START</string>
    <string name="app_name_old">LoQ Old</string>
    <string name="score_default">0</string>
    <string name="btn_ans_1_tag">1</string>
    <string name="btn_ans_2_tag">2</string>
    <string name="btn_ans_3_tag">3</string>
    <string name="btn_ans_4_tag">4</string>
    <string name="buttonStopText">STOP</string>
    <string name="buttonTestText">Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Result Screen-->
    <string name="result_wrong_champions">Wrong champions answered: %1$d</string>
    <string name="result_final_score">Final Score: %1$d</string>
    <string name="result_champions">Champions: %1$d</string>
    <string name="background_light_image">Background light image</string>
</resources>