<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".championQuizActivities.ChampionQuizTraining"
    tools:viewBindingIgnore="true">

    <LinearLayout
        android:id="@+id/postGameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tvFinalScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/final_score_default"
            android:textSize="50sp"
            android:visibility="visible" />


        <TextView
            android:id="@+id/tvFinalAccuracy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/final_accuracy_default"
            android:textSize="45sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvFinalTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/final_time_default"
            android:textSize="50sp"
            android:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/final_return_menu"
            android:visibility="visible" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/retry_button"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:text="@string/score_text" />

            <TextView
                android:id="@+id/wrongsViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/timer_default" />

            <ImageView
                android:id="@+id/timerImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="0"
                android:cropToPadding="false"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
        </LinearLayout>

        <TextView
            android:id="@+id/championText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/average"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/default_champpick"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnAns1"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@android:string/untitled"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/defaultchampion" />

            <ImageButton
                android:id="@+id/btnAns2"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@android:string/untitled"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/defaultchampion" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnAns3"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:adjustViewBounds="false"
                android:contentDescription="@android:string/untitled"
                android:cropToPadding="false"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/defaultchampion" />

            <ImageButton
                android:id="@+id/btnAns4"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@android:string/untitled"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/defaultchampion" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startQuizButton"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/countdown_button_default"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>