<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".entrypoint.championquiz.ChampionQuizFragment">


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:id="@+id/scoreLineNonTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight=".2" />

            <TextView
                android:id="@+id/scoreViewTextNonTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:freezesText="true"
                android:gravity="end"
                android:text="@string/score_text" />

            <TextView
                android:id="@+id/scoreViewNonTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:freezesText="true"
                android:gravity="start"
                android:text="@string/score_default" />

            <Space
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight=".2" />

            <TextView
                android:id="@+id/wrongViewTextNonTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:freezesText="true"
                android:gravity="end"
                android:text="@string/wrongs_default" />

            <TextView
                android:id="@+id/wrongViewNonTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:freezesText="true"
                android:gravity="start"
                android:text="@string/score_default" />

            <Space
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight=".2" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:gravity="end"
                android:text="@string/timer_default" />

            <ImageView
                android:id="@+id/timerImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="0"
                android:cropToPadding="false"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

            <Space
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight=".2" />
        </LinearLayout>


    <LinearLayout
        android:id="@+id/scoreLineTimeAttack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Space
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight=".2" />

        <TextView
            android:id="@+id/scoreViewTextTimeAttack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:freezesText="true"
            android:gravity="end"
            android:text="@string/score_text" />

        <TextView
            android:id="@+id/scoreViewTimeAttack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:freezesText="true"
            android:gravity="start"
            android:text="@string/score_default" />

        <Space
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight=".2" />

        <TextView
            android:id="@+id/wrongsViewTextTimeAttack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:freezesText="true"
            android:gravity="end"
            android:text="@string/wrongs_default" />

        <TextView
            android:id="@+id/wrongsViewTimeAttack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:freezesText="true"
            android:gravity="start"
            android:text="@string/score_default" />

        <Space
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight=".2" />

    </LinearLayout>

    <TextView
        android:id="@+id/championText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/average"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/default_champpick"
        android:textSize="36sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnAns1"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@android:string/untitled"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/defaultchampion"
                android:tag="@string/btn_ans_1_tag"/>

            <ImageButton
                android:id="@+id/btnAns2"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@android:string/untitled"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/defaultchampion"
                android:tag="@string/btn_ans_2_tag" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnAns3"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:adjustViewBounds="false"
                android:contentDescription="@android:string/untitled"
                android:cropToPadding="false"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/defaultchampion"
                android:tag="@string/btn_ans_3_tag" />

            <ImageButton
                android:id="@+id/btnAns4"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@android:string/untitled"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/defaultchampion"
                android:tag="@string/btn_ans_4_tag" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    <LinearLayout
        android:id="@+id/timeAttackLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <ImageView
            android:id="@+id/timeAttackTimer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight=".1"
            android:contentDescription="@string/timer_default"
            android:visibility="visible"
            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1" />

        <TextView
            android:id="@+id/countdownView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/countdown_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="36sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startQuizButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/countdown_button_default"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>