<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".entrypoint.quizmode.QuizModeFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Training Mode"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="51dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trainFirstButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_one_default"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="101dp" />

        <Button
            android:id="@+id/trainSecondButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_two_default"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="101dp" />

        <Button
            android:id="@+id/trainThirdButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_three_default"
            tools:layout_editor_absoluteX="276dp"
            tools:layout_editor_absoluteY="101dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time Attack Mode"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="216dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/timeFirstButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_one_default"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="254dp" />

        <Button
            android:id="@+id/timeSecondButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_two_default"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="254dp" />

        <Button
            android:id="@+id/timeThirdButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_three_default"
            tools:layout_editor_absoluteX="271dp"
            tools:layout_editor_absoluteY="254dp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Marathon Mode"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="370dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/marathonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PLAY"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="410dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Endless Mode"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="513dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/endlessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PLAY"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="562dp" />
    </LinearLayout>

</LinearLayout>